# paddle-ocr-transplant

./: CMakeLists.txt  README.md  changelog  main.cpp  predict_algorithm.hpp  predict_config.hpp  predict_config.ini  predict_detection.hpp  predict_interface.h  predict_ocr.cpp  predict_recogntion.hpp
clipper/: CMakeLists.txt
dep/: CMakeLists.txt
words/: ppocr_keys_v1gbk.txt
